menu: fixed janky spacing on mobile

--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -67,10 +67,6 @@
     width: 100%;
     justify-content: flex-end;
   }
-  .header__right ul a {
-    padding-left: 0.25em;
-    margin-left: 0.25em;
-  }
 
     .header__right .btn {
       display: flex;
